# rawsight_ML

./: .coverage  .git-blame-ignore-revs  .gitignore  LICENSE  README.md  pyproject.toml  pytest-coverage.txt  requirements.txt
.github/workflows/: python-app.yml
Course1/Week1/: cost_function.py  gradient_descent.py
Course1/Week2/: feature_scaling_and_learning_rate.py  multiple_linear_regression.py  polynomial_regression.py  sklearn_linear_regression.py
Course1/Week3/: __init__.py  logistic_regression.py  regularization.py  sklearn_logistic_regression.py
Course2/Week1/: coffee_roasting_numpy.py  coffee_roasting_tensorflow.py  neurons_and_layers.py
Course2/Week3/: applying_ml.py
Course3/Notes/: collab_filter.md  content_filter.md  pca.md  reinforcement_learning.md
Course3/lunar_lander_lab/: lander.ipynb
datasets/: blackbody_10000_1e50_Hz.csv  coffee_data.csv  datasets.py  houses.csv  tumors_simple.csv
rawsight/: __init__.py  normalization.py  optimizers.py  regression.py  scoring.py
rawsight/clustering/: kmeans.py
rawsight/cost_functions/: __init__.py  cost_function_factory.py  cost_functions.py  regularization.py
rawsight/datasets/: datasets.py
rawsight/distances/: __init__.py  combination.py  distance.py  metrics.py
rawsight/models/: linear.py  logistic.py  model.py  polynomial.py  (+1 more)
tests/: test_bb.py  test_linear_regression.py  test_logistic_regression.py  test_normalization.py  test_softmax.py
utils/: __init__.py  cost_functions.py  input_validation.py  linear_regression.py  normalization.py  optimizers.py  regression.py  scoring.py
(+32 files in other folders)
