[build-system]
requires = ["flit_core >=3.5", "setuptools >=42", "wheel"]
build-backend = "flit_core.buildapi"

[project]
name= 'rawsight'
authors = [{name = "Emir Karamehmetoglu", email = "emirkmo@github.com"}]
dynamic = ["version", "description"]
classifiers=["Programming Language :: Python :: 3",
                 "License :: OSI Approved :: MIT License",
                 "Operating System :: OS Independent",
                 "Topic :: Scientific/Engineering :: Astronomy"]
requires-python = '>=3.10'
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "pandas",
]

[project.urls]
Home = "https://github.com/emirkmo/rawsight_ML"

[project.optional-dependencies]
course = [
    "matplotlib",
    "seaborn",
    "tensorflow",
    "sklearn",
]
test = [
    "sklearn",
    "tensorflow",
    "pytest",
    "pytest-cov",
]
dev = [
    "flake8",
    "black",
    "isort",
    "mypy",
]

[tool.black]
line-length = 88
preview = false
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.idea
  | \.hg
  | \.venv
  | venv
  | \.ipynb_checkpoints
  | _build
  | buck-out
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | Course1
  | Course2
  | Course3
  | htmlcov
  | .coverage
)/
'''

[tool.pytest.ini_options]
testpaths = ["rawsight/tests"]
addopts = "--cov=rawsight"
